Fix: User/Colony wizard transactions container spacing

--- a/src/modules/dashboard/components/CreateUserWizard/StepConfirmTransaction.css
+++ b/src/modules/dashboard/components/CreateUserWizard/StepConfirmTransaction.css
@@ -1,6 +1,6 @@
 .main {
   padding-top: 193px;
-  width: 460px;
+  width: 500px;
 }
 
 .container {
